WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115216
Video playback has corruption on the edges of the video
https://bugs.webkit.org/show_bug.cgi?id=115216
Summary
Video playback has corruption on the edges of the video
Jer Noble
Reported
2013-04-25 18:06:50 PDT
"When I try and play this video, I see corruption on the edges of the video." Regressing determined that this was caused by
http://trac.webkit.org/changeset/146531
.
Attachments
Patch
(12.54 KB, patch)
2013-04-26 16:34 PDT
,
Jer Noble
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2
(594.33 KB, application/zip)
2013-04-26 21:29 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-04-25 18:11:46 PDT
RenderVideo does not paint a background color if it has a poster attribute, breaking the assumptions of RenderLayer::backgroundIsKnownToBeOpaqueInRect().
Simon Fraser (smfr)
Comment 2
2013-04-25 19:50:49 PDT
But also RenderImage::backgroundIsKnown.... doesn't deal with aspect-ratio resize that RenderVideo does.
Jer Noble
Comment 3
2013-04-26 16:34:16 PDT
Created
attachment 199872
[details]
Patch
Jer Noble
Comment 4
2013-04-26 16:55:12 PDT
In a future patch, RenderImage should change it's implementation of foregroundIsKnownToBeOpaqueInRect() to take into account object-fit.
Build Bot
Comment 5
2013-04-26 21:29:27 PDT
Comment on
attachment 199872
[details]
Patch
Attachment 199872
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/58666
New failing tests: media/video-poster-background.html
Build Bot
Comment 6
2013-04-26 21:29:28 PDT
Created
attachment 199888
[details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Jer Noble
Comment 7
2013-04-26 22:21:43 PDT
The new test is failing with a 0.01% image diff. The artifacts introduced by the .jpg version of the video frame are enough to trigger a image failure. I've updated the test to clip out the video frame, leaving only the video background visible. This eliminates the 0.01% image diff.
Jer Noble
Comment 8
2013-04-26 22:30:05 PDT
Committed
r149232
: <
http://trac.webkit.org/changeset/149232
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug