Video playback has corruption on the edges of the video https://bugs.webkit.org/show_bug.cgi?id=115216

Reviewed by Simon Fraser.

Source/WebCore:

Test: media/video-poster-background.html

RenderImage correctly answers foregroundIsKnownToBeOpaqueInRect() method
when a poster image is displayed, but once the video begins playing and
the poster image is no longer displayed, RenderImage will continue to
answer 'true' even when the video does not occupy the entire render box.
Override foregroundIsKnownToBeOpaqueInRect() in order to more correctly
answer the question for the video layer.

* rendering/RenderImage.h: Make foregroundIsKnownToBeOpaqueInRect() protected
    (vs. private).
* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::foregroundIsKnownToBeOpaqueInRect): Added. Return
    true if the rect parameter is entirely contained by the video box.
* rendering/RenderVideo.h:

LayoutTests:

* media/content/test.jpg: Added.
* media/video-poster-background-expected.html: Added.
* media/video-poster-background.html: Added.

Canonical link: https://commits.webkit.org/133725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149232 268f45cc-cd09-0410-ab3c-d52691b4dbfc